# oarepo-model-builder-communities

./: .gitignore  README.md  format.sh  pyproject.toml  run-tests.sh  run_tests.sh  setup.cfg
.github/workflows/: main.yml  pypi-publish.yml  tests.yml
.trunk/: trunk.yaml
build-tests/: thesis.yaml
oarepo_model_builder_communities/: version.py
oarepo_model_builder_communities/builders/: invenio_communities_service_config.py
oarepo_model_builder_communities/builders/record_communities/: __init__.py  record_metadata_extra_fields.py  service_config_additional.py  setup_cfg.py
oarepo_model_builder_communities/datatypes/: __init__.py  communities.py
oarepo_model_builder_communities/datatypes/components/: __init__.py  community_records_profile.py  record_communities_profile.py  record_item.py
oarepo_model_builder_communities/datatypes/components/community_records_model/: __init__.py  marshmallow.py  resource.py  search_options.py  service.py  ui_marshmallow.py
oarepo_model_builder_communities/datatypes/components/record_communities_model/: __init__.py  blueprints.py  defaults.py  ext_resource.py  marshmallow.py  record.py  record_metadata.py  requests.py  resource.py  search_options.py  service.py
oarepo_model_builder_communities/datatypes/components/shared/: __init__.py  record_metadata.py
oarepo_model_builder_communities/invenio/templates/: invenio_record_communities.py.jinja2
oarepo_model_builder_communities/profiles/: community_records.py  record_communities.py
oarepo_model_builder_communities/tests_builders/: __init__.py  conftest.py
oarepo_model_builder_communities/tests_builders/community_records/: __init__.py  parent_conftest.py
oarepo_model_builder_communities/tests_builders/community_records/templates/: test_resources.py.jinja2
oarepo_model_builder_communities/tests_builders/record_communities/: __init__.py
oarepo_model_builder_communities/tests_builders/record_communities/templates/: parent_conftest.py.jinja2  test_resources.py.jinja2
oarepo_model_builder_communities/tests_builders/templates/: conftest.py.jinja2
tests/: mock_filesystem.py  test_build_jsonschema.py  test_build_mapping.py  test_model.yaml
