[metadata]
name = oarepo-model-builder-communities
version = 4.0.3
description =
authors = Ronald Krist <krist@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    oarepo-model-builder-tests>=4.0.0
    oarepo-model-builder-drafts>=4.0.0
#packages = find:

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

#[options.packages.find]
#exclude = example_model

[options.entry_points]
oarepo_model_builder.datatypes.components =
    record_communities = oarepo_model_builder_communities.datatypes.components:RECORD_COMMUNITIES_COMPONENTS
    community_records = oarepo_model_builder_communities.datatypes.components:COMMUNITY_RECORDS_COMPONENTS
    communities_shared = oarepo_model_builder_communities.datatypes.components:SHARED_COMPONENTS

oarepo_model_builder.builders.record_communities:
    #0110-invenio_record  = oarepo_model_builder.invenio.invenio_record:InvenioRecordBuilder
    0120-invenio_record_metadata  = oarepo_model_builder.invenio.invenio_record_metadata:InvenioRecordMetadataBuilder
    0140-invenio_record_ui_marshmallow  = oarepo_model_builder.invenio.invenio_record_ui_marshmallow:InvenioRecordUIMarshmallowBuilder
    #0200-invenio_record_permissions  = oarepo_model_builder.invenio.invenio_record_permissions:InvenioRecordPermissionsBuilder
    0310-invenio_record_service_config  = oarepo_model_builder.invenio.invenio_record_service_config:InvenioRecordServiceConfigBuilder
    0320-invenio_record_service  = oarepo_model_builder.invenio.invenio_record_service:InvenioRecordServiceBuilder
    0400-invenio_record_resource_config  = oarepo_model_builder.invenio.invenio_record_resource_config:InvenioRecordResourceConfigBuilder
    0410-invenio_record_resource  = oarepo_model_builder.invenio.invenio_record_resource:InvenioRecordResourceBuilder
    0420-invenio_api_views  = oarepo_model_builder.invenio.invenio_api_views:InvenioAPIViewsBuilder
    0421-invenio_app_views  = oarepo_model_builder.invenio.invenio_app_views:InvenioAPPViewsBuilder
    0430-ui_serializer  = oarepo_model_builder.invenio.invenio_record_ui_serializer:InvenioRecordUISerializerBuilder
    0500-invenio_config  = oarepo_model_builder.invenio.invenio_config:InvenioConfigBuilder
    0600-invenio_ext  = oarepo_model_builder.invenio.invenio_ext:InvenioExtBuilder
    0605-invenio_ext_resource = oarepo_model_builder.invenio.invenio_ext_resource:InvenioExtResourceBuilder
    0700-invenio_ext  = oarepo_model_builder.invenio.invenio_proxies:InvenioProxiesBuilder
    0930-invenio_resource_setup_cfg  = oarepo_model_builder.invenio.invenio_record_resource_setup_cfg:InvenioRecordResourceSetupCfgBuilder

    0950-published_record_marshmallow = oarepo_model_builder_communities.builders.record_communities.published_record_marshmallow:PublishedRecordMarshmallowBuilder
    #1000-record_communities_service_config_add = oarepo_model_builder_communities.builders.record_communities.service_config_additional:RecordCommunitiesServiceConfigAdditionalBuilder
    1100-record_communities_record_metadata_extra_fields = oarepo_model_builder_communities.builders.record_communities.record_metadata_extra_fields:RecordCommunitiesRecordMetadataExtraFieldsBuilder
    1200-record_communities_setup_cfg = oarepo_model_builder_communities.builders.record_communities.setup_cfg:RecordCommunitiesSetupCfgBuilder
#0610-invenio_ext_setup_cfg  = oarepo_model_builder.invenio.invenio_ext_setup_cfg:InvenioExtSetupCfgBuilder
    #0930-invenio_resource_setup_cfg  = oarepo_model_builder.invenio.invenio_record_resource_setup_cfg:InvenioRecordResourceSetupCfgBuilder
    2000-communities_conftest = oarepo_model_builder_communities.tests_builders.conftest:CommunitiesConftestBuilder
    2100-record_communities_test_resources = oarepo_model_builder_communities.tests_builders.record_communities.test_resources:RecordCommunitiesTestResourcesBuilder

oarepo_model_builder.builders.community_records:
    #0110-invenio_record  = oarepo_model_builder.invenio.invenio_record:InvenioRecordBuilder
    0120-invenio_record_metadata  = oarepo_model_builder.invenio.invenio_record_metadata:InvenioRecordMetadataBuilder
    0140-invenio_record_ui_marshmallow  = oarepo_model_builder.invenio.invenio_record_ui_marshmallow:InvenioRecordUIMarshmallowBuilder
    #0200-invenio_record_permissions  = oarepo_model_builder.invenio.invenio_record_permissions:InvenioRecordPermissionsBuilder
    0310-invenio_record_service_config  = oarepo_model_builder.invenio.invenio_record_service_config:InvenioRecordServiceConfigBuilder
    0320-invenio_record_service  = oarepo_model_builder.invenio.invenio_record_service:InvenioRecordServiceBuilder
    0400-invenio_record_resource_config  = oarepo_model_builder.invenio.invenio_record_resource_config:InvenioRecordResourceConfigBuilder
    0410-invenio_record_resource  = oarepo_model_builder.invenio.invenio_record_resource:InvenioRecordResourceBuilder
    0420-invenio_api_views  = oarepo_model_builder.invenio.invenio_api_views:InvenioAPIViewsBuilder
    0421-invenio_app_views  = oarepo_model_builder.invenio.invenio_app_views:InvenioAPPViewsBuilder
    0430-ui_serializer  = oarepo_model_builder.invenio.invenio_record_ui_serializer:InvenioRecordUISerializerBuilder
    0500-invenio_config  = oarepo_model_builder.invenio.invenio_config:InvenioConfigBuilder
    0600-invenio_ext  = oarepo_model_builder.invenio.invenio_ext:InvenioExtBuilder
    0605-invenio_ext_resource = oarepo_model_builder.invenio.invenio_ext_resource:InvenioExtResourceBuilder
    0700-invenio_ext  = oarepo_model_builder.invenio.invenio_proxies:InvenioProxiesBuilder
    0930-invenio_resource_setup_cfg  = oarepo_model_builder.invenio.invenio_record_resource_setup_cfg:InvenioRecordResourceSetupCfgBuilder

    #1000-record_communities_service_config_add = oarepo_model_builder_communities.builders.record_communities.service_config_additional:RecordCommunitiesServiceConfigAdditionalBuilder
    1100-record_communities_record_metadata_extra_fields = oarepo_model_builder_communities.builders.record_communities.record_metadata_extra_fields:RecordCommunitiesRecordMetadataExtraFieldsBuilder
    1200-record_communities_setup_cfg = oarepo_model_builder_communities.builders.record_communities.setup_cfg:RecordCommunitiesSetupCfgBuilder

    2000-communities_conftest = oarepo_model_builder_communities.tests_builders.conftest:CommunitiesConftestBuilder
    2050-community_records_conftest = oarepo_model_builder_communities.tests_builders.community_records.conftest:CommunityRecordsConftestBuilder
    2100-community_records_test_resources = oarepo_model_builder_communities.tests_builders.community_records.test_resources:CommunityRecordsTestResourcesBuilder


oarepo_model_builder.templates =
    99-record_communities_templates = oarepo_model_builder_communities.builders.record_communities
    99-communities_shared_tests_templates = oarepo_model_builder_communities.tests_builders
    99-record_communities_tests_templates = oarepo_model_builder_communities.tests_builders.record_communities
    99-community_records_tests_templates = oarepo_model_builder_communities.tests_builders.community_records

oarepo_model_builder.profiles =
    record_communities = oarepo_model_builder_communities.profiles.record_communities:RecordCommunitiesProfile
    community_records = oarepo_model_builder_communities.profiles.community_records:CommunityRecordsProfile

oarepo_model_builder.datatypes =
    record_communities = oarepo_model_builder_communities.datatypes:communities_datatypes

#oarepo_model_builder.templates =
#    99-draft_file_templates = oarepo_model_builder_drafts_files.builders
#    99-draft_file_test_templates = oarepo_model_builder_drafts_files.builders.tests


