[metadata]
name = oarepo-model-builder-communities
version = 5.0.2
description =
authors = Ronald Krist <krist@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    oarepo-model-builder-tests>=4.0.0
    oarepo-model-builder-drafts>=4.0.0
    oarepo-model-builder-requests>=4.0.0
    oarepo-model-builder-workflows>=1.0.0
#packages = find:

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

#[options.packages.find]
#exclude = example_model

[options.entry_points]
oarepo_model_builder.datatypes.components =
    record_communities = oarepo_model_builder_communities.datatypes.components:RECORD_COMMUNITIES_COMPONENTS

oarepo_model_builder.builders.record:
    5000-add-to-setup = oarepo_model_builder_communities.builders.setup_cfg:CommunitiesSetupCfgBuilder

oarepo_model_builder.builders.draft:
    5000-communities_metadata  = oarepo_model_builder_communities.builders.communities_metadata:CommunitiesMetadataBuilder

oarepo_model_builder.templates =
    99-record_communities_templates = oarepo_model_builder_communities.builders
    #99-communities_shared_tests_templates = oarepo_model_builder_communities.tests_builders
    #99-record_communities_tests_templates = oarepo_model_builder_communities.tests_builders.record_communities


